--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "socket-chat-example",
-  "version": "0.0.1",
-  "description": "my first socket.io app",
+  "name": "groove",
+  "version": "1.0.0",
+  "description": "Flaunt you playlist",
+  "main": "index.js",
   "dependencies": {
-    "express": "^4.15.2",
+    "body-parser": "^1.16.0",
+    "express": "^4.14.0",
+    "googleapis": "^16.1.0",
+    "http": "0.0.0",
+    "jQuery": "^1.7.4",
+    "jquery": "^3.1.1",
+    "jsdom": "^9.9.1",
+    "node-jsdom": "^3.1.5",
+    "request": "^2.79.0",
+    "requestify": "^0.2.5",
+    "server": "^1.0.0-alpha.16",
     "socket.io": "^1.7.3"
   },
+  "devDependencies": {},
   "scripts": {
-    "start": "node index.js"
-  }
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Arpit",
+  "license": "ISC"
 }
