Updated Readme and added separate working file for chat

--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "groove",
+  "name": "Collaborator",
   "version": "1.0.0",
   "description": "Flaunt you playlist",
   "main": "index.js",
   "dependencies": {
-    "body-parser": "^1.16.0",
+    "body-parser": "^1.17.1",
     "express": "^4.14.0",
     "googleapis": "^16.1.0",
     "http": "0.0.0",
     "jQuery": "^1.7.4",
-    "jquery": "^3.1.1",
-    "jsdom": "^9.9.1",
+    "jquery": "^3.2.1",
+    "jsdom": "^9.12.0",
     "node-jsdom": "^3.1.5",
-    "request": "^2.79.0",
+    "request": "^2.81.0",
     "requestify": "^0.2.5",
-    "server": "^1.0.0-alpha.16",
+    "server": "^1.0.0-alpha.26",
     "socket.io": "^1.7.3"
   },
   "devDependencies": {},
